changed color of header to their color code

--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -4,7 +4,8 @@
 }
 
 .navbar-header{
-    background-color: #451417;
+    /* background-color: #451417; */
+    background-color: #9c182f;
     padding-bottom: 10px;
     padding-top: 10px;
     box-shadow: 0 -3px 8px 5px #0000009e;
