added facebook link to header

--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -3,6 +3,10 @@
     width: 100%;
 }
 
+.navbarRight {
+    float: right;
+}
+
 .navbar-header{
     /* background-color: #451417; */
     background-color: #9c182f;
