--- a/src/components/PageFooter/PageFooter.css
+++ b/src/components/PageFooter/PageFooter.css
@@ -1,7 +1,7 @@
-.footerBody {
-    background-color: #451417;
-
+.page-footer {
+    background-color: #dfdfdf
 }
+
 
 .socialItems {
     color: #ffffff;
