--- a/src/components/GalleryComponent/GalleryComponent.css
+++ b/src/components/GalleryComponent/GalleryComponent.css
@@ -7,8 +7,8 @@
 }
 
 .galleryPhotos {
-    margin-bottom: 200px;
-    padding-bottom: 200px;
+    /* margin-bottom: 200px;
+    padding-bottom: 200px; */
 }
 /* Gallery Scrollbar */
     ::-webkit-scrollbar {
