--- a/src/components/GalleryComponent/GalleryComponent.css
+++ b/src/components/GalleryComponent/GalleryComponent.css
@@ -1,15 +1,14 @@
 /* Gallery */
 #art-gallery {
-    max-height: 600px;
     padding-top: 15px;
     display: flex;
     flex-wrap: wrap;
 }
 
 .galleryPhotos {
-    /* margin-bottom: 200px;
-    padding-bottom: 200px; */
+    max-height: 100%;
 }
+
 /* Gallery Scrollbar */
     ::-webkit-scrollbar {
         width: 5px;
@@ -51,13 +50,13 @@
         object-position: center;
     }
 
-/* Art Feature Modal */
+/* Image Feature Modal */
     .close-btn {
-        background-color: #ffffff00;
-        border: none;
+        background-color: #aaaaaa;
+        /* border: none; */
         position: absolute;
-        top: 0px;
-        right: 0px;
+        top: 5px;
+        right: 5px;
     }
 
     i.fa.fa-close {
@@ -67,22 +66,22 @@
     }
 
     #feature-image {
-        max-height: 100%;
-        max-width: 100%;
+        max-height: 95%;
+        max-width: 95%;
         
     } 
 /* Media Queries */
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 575px) {
-.art {
-    height: 250px;
+/* @media only screen and (max-width: 991px) {
+.pageContentWidth {
+    margin-bottom: 200px;
 }
-} 
+}  */
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
 .art {
     height: 200px;
 }
-} 
+}  */
