--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -12,7 +12,6 @@
     background-color: #9c182f;
     padding-bottom: 10px;
     padding-top: 10px;
-    box-shadow: 0 -3px 8px 5px #0000009e;
     width: 100%;
     z-index: 1;
 }
@@ -29,10 +28,8 @@
     background-color: white;
 }
   
-/* .navbar{
-    margin-bottom: 0px !important;
-    color: white;
+.navbar{
+    margin-bottom: 0px;
     padding: 0px;
-    border: 0px !important;
     width: 100%;
-} */
+}
