building more of the application form

--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -5,6 +5,7 @@
 
 .navbarRight {
     float: right;
+    line-height: 50px;
 }
 
 .navbar-header{
@@ -25,6 +26,7 @@
 .navbar-brand {
     color: white;
     margin-right: 10px;
+    line-height: 50px;
 }
 
 .headerContainer{
