--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -22,3 +22,9 @@
     color: #333333;
     font-weight: bold;
 }
+
+.serviceDescription {
+    text-align: left;
+    color: #333333;
+    margin-left: 20px;
+}
