--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -21,6 +21,8 @@
     margin-top: 10px;
     color: #333333;
     font-weight: bold;
+    text-align: center;
+    height: 56px;
 }
 
 .serviceDescription {
