--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -20,3 +20,21 @@
     .secondAboutSection :nth-child(1) { order: 2; }
     .secondAboutSection :nth-child(2) { order: 1; }
 }
+
+.associationsLogo {
+    max-width: 70%;
+    display:block;
+    margin:auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.associationsHeading {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.associationsHeading span {
+    color: #9C182F
+}
