--- a/src/components/ApplicationForm/ApplicationForm.css
+++ b/src/components/ApplicationForm/ApplicationForm.css
@@ -14,6 +14,11 @@
 
 .applicationSubmitButton {
     margin-top: 10px;
+    border-radius: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .applicationAgreement {
