--- a/src/components/ContactForQuote/ContactForQuote.css
+++ b/src/components/ContactForQuote/ContactForQuote.css
@@ -32,6 +32,8 @@
     font-weight: bold;
     text-align: center;
     position: absolute;
+    padding-top: 20px;
+    padding-bottom: 20px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -44,7 +46,8 @@
     display:block;
     margin:auto;
     position: relative;
-    top: 15%;
+    top: 10%;
+    padding-top: 20px;
 }
 
 .callUsHeading span {
@@ -53,10 +56,12 @@
 
 .phoneIcon {
     position: relative;
-    top: 15%;
+    top: 10%;
     width: 100px;
     display:block;
     margin:auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .phoneDiv {
