--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,8 @@
 .AboutUsLogo{
-    max-width: 60%;
+    display:block;
+    margin:auto;
+    max-width: 100%;
+    padding-bottom: 7px
 }
 
 .buildingPic{
