--- a/client/src/components/ContactForQuote/ContactForQuote.css
+++ b/client/src/components/ContactForQuote/ContactForQuote.css
@@ -10,12 +10,14 @@
 }
 
 .contactUsForm {
+    width: 90%;
     margin-left: 30px;
     margin-right: 30px;
     background-color: #9C182F;
     border-style: solid;
     border-color: #333333;
     padding: 20px;
+    padding-bottom: 60px;
 }
 
 .contactSubmitButton {
@@ -66,4 +68,11 @@
 
 .contactFormReCaptcha {
     margin-top: 10px;
+}
+
+
+@media only screen and (max-width: 767px) {
+    .Or {
+        padding-top: 60px;
+    }
 }
