changed footer layout a media query for the facebook logo link

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,16 @@
   position:relative;
   width: 100%;
 }
+
+@media only screen and (max-width: 991px) {
+  .App {
+    margin-right: -5px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .App {
+   position: relative;
+   right: 0;
+  }
+}
