--- a/client/src/components/HeaderNav/HeaderNav.css
+++ b/client/src/components/HeaderNav/HeaderNav.css
@@ -48,3 +48,9 @@
     padding: 0px;
     width: 100%;
 }
+
+@media only screen and (max-width: 991px) {
+    .navbarRight {
+        margin-right: 10px;
+    }
+}
