--- a/client/src/components/ContactForQuote/ContactForQuote.css
+++ b/client/src/components/ContactForQuote/ContactForQuote.css
@@ -12,7 +12,7 @@
 .contactUsForm {
     width: 90%;
     margin-left: 30px;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     background-color: #9C182F;
     border-style: solid;
     border-color: #333333;
