--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -1,7 +1,7 @@
 .AboutUsLogo{
     display:block;
     margin:auto;
-    max-width: 100%;
+    max-width: 80%;
     padding-bottom: 7px
 }
 
@@ -10,9 +10,35 @@
     margin-top: 20px;
 }
 
-.aboutMVT,
+.aboutMVT{
+    margin-top: 60px;
+}
+
 .aboutMVT2{
     margin-top: 20px;
+}
+
+.aboutMVT p{
+    font-size: 20px;
+    color: #333333
+}
+
+.associationsLogo {
+    max-width: 70%;
+    display:block;
+    margin:auto;
+    position: relative;
+    top: 50%;
+    /* transform: translateY(-50%); */
+}
+
+.associationsHeading {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.associationsHeading span {
+    color: #9C182F
 }
 
 @media only screen and (max-width: 767px) {
@@ -24,20 +50,8 @@
     .secondAboutSection :nth-child(2) { order: 1; }
 }
 
-.associationsLogo {
-    max-width: 70%;
-    display:block;
-    margin:auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.associationsHeading {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.associationsHeading span {
-    color: #9C182F
-}
+@media only screen and (max-width: 1199px) {
+    .aboutMVT{
+        margin-top: 20px;
+    }
+}    
