updated the npm packages

--- a/client/src/components/ContactForQuote/ContactForQuote.css
+++ b/client/src/components/ContactForQuote/ContactForQuote.css
@@ -2,6 +2,10 @@
     color: #9C182F;
 }
 
+.contactForQuote {
+    margin-bottom: 20px;
+}
+
 .contactForQuoteHeading {
     margin-top: 20px;
     font-weight: bold;
