--- a/client/src/components/ContactFormSubmit/ContactFormSubmit.css
+++ b/client/src/components/ContactFormSubmit/ContactFormSubmit.css
@@ -12,6 +12,7 @@
     border-style: solid;
     margin-top: 20px;
     padding: 0px 30px 30px 30px;
+    margin-bottom: 20px;
 }
 
 .contactSubmitParagraph {
