--- a/client/src/components/ContactForQuote/ContactForQuote.css
+++ b/client/src/components/ContactForQuote/ContactForQuote.css
@@ -74,6 +74,13 @@
     margin-top: 10px;
 }
 
+#toast {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+}
+
 
 @media only screen and (max-width: 767px) {
     .Or {
