--- a/client/src/components/ApplicationForm/ApplicationForm.css
+++ b/client/src/components/ApplicationForm/ApplicationForm.css
@@ -52,3 +52,10 @@ h4 {
     font-weight: bold;
     color: #333333
 }
+
+#applicationToast {
+    color: #333333;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+}
